--- a/2 - Happy Hour.ipynb
+++ b/2 - Happy Hour.ipynb
@@ -15,10 +15,10 @@
    "source": [
     "import random\n",
     "\n",
-    "bars = [\"The Hamilton\",\n",
+    "bars = [\"Arts and Crafts Beer Parlor\",\n",
+    "        \"The Hamilton\",\n",
     "        \"1020 Bar\",\n",
-    "        \"The Heights\",\n",
-    "        \"The Dead Poet\"]\n",
+    "        \"The Heights\"]\n",
     "\n",
     "people = [\"Mattan\",\n",
     "          \"that person you forgot to text back\",\n",
