--- a/3 - Basics of Python.ipynb
+++ b/3 - Basics of Python.ipynb
@@ -4,6 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Basics of Python\n",
+    "In order to be able to do most if the things you want to do in Python, you need to know about:\n",
+    "1. Printing\n",
+    "- Variables\n",
+    "- Math\n",
+    "- Strings\n",
+    "- If/Else\n",
+    "- Lists\n",
+    "- Loops\n",
+    "- Dictionaries\n",
+    "- Functions\n",
+    "- Importing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Printing\n",
     "Printing is one way to display things in Python."
    ]
@@ -44,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -298,20 +316,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Do you want to hear a joke? yes\n",
       "I'm against picketing, but I don't know how to show it.\n"
      ]
     }
    ],
    "source": [
-    "answer = input(\"Do you want to hear a joke? \")\n",
+    "answer = \"Yes\"\n",
     "\n",
     "if answer.lower() == \"yes\":\n",
     "    print(\"I'm against picketing, but I don't know how to show it.\")\n",
@@ -332,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +360,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[55, 0.5, 'Puppies', ['FB', 'AAPL', 'NFLX', 'GOOGL']]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random_things"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -449,8 +486,8 @@
     }
    ],
    "source": [
-    "us_cities = cities[0:2]\n",
-    "print(us_cities)"
+    "first_two_cities = cities[0:2]\n",
+    "print(first_two_cities)"
    ]
   },
   {
@@ -463,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "metadata": {
     "scrolled": false
    },
@@ -754,7 +791,6 @@
       "Appending 9604 into list\n",
       "Appending 9801 into list\n",
       "Appending 10000 into list\n",
-      "The value of number is: 100\n",
       "The value of squares is: [1, 4, 9, 16, 25, 36, 49, 64, 81, 100, 121, 144, 169, 196, 225, 256, 289, 324, 361, 400, 441, 484, 529, 576, 625, 676, 729, 784, 841, 900, 961, 1024, 1089, 1156, 1225, 1296, 1369, 1444, 1521, 1600, 1681, 1764, 1849, 1936, 2025, 2116, 2209, 2304, 2401, 2500, 2601, 2704, 2809, 2916, 3025, 3136, 3249, 3364, 3481, 3600, 3721, 3844, 3969, 4096, 4225, 4356, 4489, 4624, 4761, 4900, 5041, 5184, 5329, 5476, 5625, 5776, 5929, 6084, 6241, 6400, 6561, 6724, 6889, 7056, 7225, 7396, 7569, 7744, 7921, 8100, 8281, 8464, 8649, 8836, 9025, 9216, 9409, 9604, 9801, 10000]\n"
      ]
     }
@@ -764,7 +800,6 @@
     "for number in range(1, 101):\n",
     "    print(f\"Appending {number**2} into list\")\n",
     "    squares.append(number**2)\n",
-    "print(f\"The value of number is: {number}\")\n",
     "print(f\"The value of squares is: {squares}\")"
    ]
   },
@@ -778,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -868,50 +903,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def greet():\n",
-    "    return \"Hey!\""
+    "def greet(name):\n",
+    "    return f\"Hey {name}!\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Hey!'"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "greet()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def greet_by_name(name):\n",
-    "    return f\"Hey {name}!\"\n",
-    "\n",
-    "def intro(person_one, person_two):\n",
-    "    return f\"{person_one}, I'd like you to meet {person_two}\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -920,33 +922,44 @@
        "'Hey Mattan!'"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "greet_by_name(\"Mattan\")"
+    "greet(\"Mattan\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def future_value(present_value, rate, periods):\n",
+    "    future_value = present_value * (1 + rate) ** periods\n",
+    "    return round(future_value, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Mattan, I'd like you to meet Guido\""
+       "161.05"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "intro(\"Mattan\", \"Guido\")"
+    "future_value(100, .1, 5)"
    ]
   },
   {
@@ -959,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {
     "scrolled": false
    },
@@ -968,17 +981,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: iexfinance in /Users/mattangriffel/anaconda3/lib/python3.7/site-packages (0.3.5)\n",
-      "Requirement already satisfied: pandas in /Users/mattangriffel/anaconda3/lib/python3.7/site-packages (from iexfinance) (0.23.4)\n",
+      "Collecting iexfinance\n",
+      "  Using cached https://files.pythonhosted.org/packages/c3/b8/e5e9004aa921fd43ad624bd0174c64e65116b93c86633152e201d0ba09d3/iexfinance-0.4.0-py3-none-any.whl\n",
       "Requirement already satisfied: requests in /Users/mattangriffel/anaconda3/lib/python3.7/site-packages (from iexfinance) (2.21.0)\n",
+      "Requirement already satisfied: pandas in /Users/mattangriffel/anaconda3/lib/python3.7/site-packages (from iexfinance) (0.23.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/mattangriffel/anaconda3/lib/python3.7/site-packages (from requests->iexfinance) (2018.11.29)\n",
+      "Requirement already satisfied: idna<2.9,>=2.5 in /Users/mattangriffel/anaconda3/lib/python3.7/site-packages (from requests->iexfinance) (2.8)\n",
+      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /Users/mattangriffel/anaconda3/lib/python3.7/site-packages (from requests->iexfinance) (1.24.1)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /Users/mattangriffel/anaconda3/lib/python3.7/site-packages (from requests->iexfinance) (3.0.4)\n",
       "Requirement already satisfied: python-dateutil>=2.5.0 in /Users/mattangriffel/anaconda3/lib/python3.7/site-packages (from pandas->iexfinance) (2.7.5)\n",
       "Requirement already satisfied: pytz>=2011k in /Users/mattangriffel/anaconda3/lib/python3.7/site-packages (from pandas->iexfinance) (2018.7)\n",
       "Requirement already satisfied: numpy>=1.9.0 in /Users/mattangriffel/anaconda3/lib/python3.7/site-packages (from pandas->iexfinance) (1.15.4)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/mattangriffel/anaconda3/lib/python3.7/site-packages (from requests->iexfinance) (2018.11.29)\n",
-      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /Users/mattangriffel/anaconda3/lib/python3.7/site-packages (from requests->iexfinance) (1.24.1)\n",
-      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /Users/mattangriffel/anaconda3/lib/python3.7/site-packages (from requests->iexfinance) (3.0.4)\n",
-      "Requirement already satisfied: idna<2.9,>=2.5 in /Users/mattangriffel/anaconda3/lib/python3.7/site-packages (from requests->iexfinance) (2.8)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/mattangriffel/anaconda3/lib/python3.7/site-packages (from python-dateutil>=2.5.0->pandas->iexfinance) (1.12.0)\n"
+      "Requirement already satisfied: six>=1.5 in /Users/mattangriffel/anaconda3/lib/python3.7/site-packages (from python-dateutil>=2.5.0->pandas->iexfinance) (1.12.0)\n",
+      "Installing collected packages: iexfinance\n",
+      "Successfully installed iexfinance-0.4.0\n"
      ]
     }
    ],
@@ -988,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {
     "scrolled": false
    },
@@ -6008,7 +6024,7 @@
        " ...}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
